Added comments and change other comments plus code on both index and equipment page

--- a/equipment.html
+++ b/equipment.html
@@ -14,16 +14,17 @@
     </style>
 </head>
 <body>
-    <header><!--Header contains Logo(linked) and symbol of bike-->
+    <!--Header contains Logo(linked)-->
+    <header>
         <div class="heading">
+            <!--Centered Logo-->
             <a href="index.html" class="logo">
                 <h1>Cycling 101</h1>
             </a>
-            <!--<i class="fas fa-biking" class="bike"></i>-->
         </div>
+        <!--Nav bar, centered-->
         <div class="navigation">
             <nav>
-                <!--Nav bar goes here, centered-->
                 <ul class="links">
                     <li>
                         <a href="index.html">Home</a>
@@ -41,103 +42,127 @@
             </nav>
         </div>
     </header>
-    <section class="main-section"><!--Bike section-->
-        <div class="main-section-text main-box-color"><!--All content here has been taken from Britannica Website-->
-            <article>
-                <h2>The Bicycle</h2>
-                <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
-                Bicycles are widely used for transportation, recreation, and sport.</p>
-                <p>Cycling, is the use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it keeps you fit and active all whilst taking in either the local or foreign landscape.</p>
-                <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types: Road Racing, Mountain and Hybrid Bikes.</p>
-                <h3>Road Racing Bike</h3>
-                <p>This is designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
-                </p>
-                <h3>Mountain Bike</h3>
-                <p>These have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
-                </p>
-                <h3>Hybrid Bikes</h3>
-                <p>This type of bike combines the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
-                <h3>Useful links:</h3>
-            </article>
+    <!--Bicycle information section-->
+    <section class="main-section">
+        <!--All content here has been taken from Britannica Website-->
+        <div class="main-section-text main-box-color">
+            <h2>The Bicycle</h2>
+            <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
+            Bicycles are widely used for transportation, recreation, and sport.</p>
+            <p>Cycling, is the use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it keeps you fit and active all whilst taking in either the local or foreign landscape.</p>
+            <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types: Road Racing, Mountain and Hybrid Bikes.</p>
+            <h3>Road Racing Bike</h3>
+            <p>This is designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
+            </p>
+            <h3>Mountain Bike</h3>
+            <p>These have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
+            </p>
+            <h3>Hybrid Bikes</h3>
+            <p>This type of bike combines the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
+            <!--Buttons to link to Wikipedia pages for more information-->
             <div class="button">
+                <h3>Useful links:</h3>
+                <!--Wiki on a racing bike-->
                 <div class="go-button">
                     <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Racing_bicycle" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the road racing bike(Opens in new tab)">Road Racing Bike</a>
                 </div>
+                <!--Wiki on a MTB-->
                 <div class="go-button">
                     <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Mountain_bike" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the mountain bike(Opens in new tab)">Mountain Bike</a> 
                 </div>
+                <!--Wiki on a hybrid bike-->
                  <div class="go-button">
                     <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Hybrid_bicycle" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the hybrid bike(Opens in new tab)">Hybrid Bike</a>
                 </div>
             </div>
         </div>
+        <!--Video detailing more info about different types of bikes-->
         <div class="bike-section-media">
             <iframe src="https://www.youtube.com/embed/Znt0UuZW2nU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
-    <section class="main-section"><!--Clothes section-->
-        <div class="main-section-text main-box-color"><!--Content here take from Road.cc-->
-            <article>
+    <!--Clothing information section-->
+    <section class="main-section">
+        <!--Content here take from Road.cc-->
+        <div class="main-section-text main-box-color">
             <h2>Clothing</h2>
             <p>Proper clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
             <h3>Jerseys</h3><p>Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
-                Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
+            Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
             <h3>Padded Shorts</h3><p>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
-            </article>
+            <!--Buttons to link to Wikipedia pages for more information-->
             <div class="button">
+                <!--Wiki on cycling Jersey-->
                 <div class="go-button">
                     <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_jersey" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Jerseys(Opens in new tab)">Jerseys</a>
                 </div>
                 <div class="go-button">
+                    <!--Wiki on padded shorts-->
                     <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_shorts" target="_blank" rel="noopener" aria-label="Click to go to a page about Padded Shorts(Opens in new tab)">Padded Shorts</a> 
                 </div>
             </div>
         </div>
+        <!--Image of a Jersey on a cyclist-->
         <div class="bike-section-media">
-            <img src="assets/images/jersey-image.jpg" alt="Man on bike pedalling towards camera">
+            <img src="assets/images/jersey-image.jpg" alt="Man wearing a white jersey on a bike">
         </div>
     </section>
-    <section class="main-section"><!--Essentials section-->
+    <!--Essentials section-->
+    <section class="main-section">
+        <!--Info taken from Wiki-->
         <div class="three-box-section">
-            <div class="one-third-box main-box-color"><!--Info taken from Wiki-->
+            <!--Helmet Information-->
+            <div class="one-third-box main-box-color">
                 <h2>The Helmet</h2>
-                <img src="assets/images/Types_of_Bicycle_Helmets.png" alt="Pictue of three different type bike helmets">
+                <img src="assets/images/Types_of_Bicycle_Helmets.png" alt="Picture of three different types of bike helmets">
                 <p>A bicycle helmet is a type of helmet designed to protect against impact to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
+                <!--Button to link to Wikipedia pages for more information-->
                 <div class="button">
                     <div class="go-button">
+                        <!--Wiki on Helmet-->
                         <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_helmet" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Helmats(Opens in new tab)">Helmets</a>
                     </div>
                 </div>
             </div>
+            <!--Second Box about the pump-->
             <div class="one-third-box main-box-color">
                 <h2>The Pump</h2>
                 <img src="assets/images/bike-pumps.jpg" alt="A picture of a bicycle pump">
                 <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always handy to take with you on a ride.</p>
+                <!--Button to link to Wikipedia pages for more information-->
                 <div class="button">
                     <div class="go-button">
+                        <!--Wiki on the pump-->
                         <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_pump" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Pumps(Opens in new tab)">Pumps</a>
                     </div>
                 </div>
             </div>
+            <!--Thrid box about Tools-->
             <div class="one-third-box main-box-color">
                 <h2>The Tools</h2>
-                <img src="assets/images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings"><!--Image was taken from Machine Mart website-->
+                <!--Image was taken from Machine Mart website-->
+                <img src="assets/images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings">
                 <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must.</p>
                 <p>In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
+                <!--Button to link to Wikipedia pages for more information-->
                 <div class="button">
                     <div class="go-button">
+                        <!--Wiki on tools-->
                         <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_tools" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Tools(Opens in new tab)">Tools</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!--Section with Embedded Map-->
     <section id="map-section">
         <h2>Bike Shop</h2>
-        <p>Below we have provided a map for you to see where there are some bike shops in the locality.</p><!--Map section-->
+        <p>Below we have provided a map for you to see where there are some bike shops in the locality.</p>
+        <!--Map shows local bike shops-->
         <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d60000.25946300302!2d-5.9147547215103415!3d54.59092788880417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sbike%20shops%20in%20belfast!5e0!3m2!1sen!2sie!4v1625218740171!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
-    <footer><!--Footer will contain links to social media-->
+    <!--Footer will contain links to social media-->
+    <footer>
         <h3>&copy; Cycling 101</h3>
         <ul class="media-links">
             <li>
