--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Cycling 101</title>
 </head>
 <body>
-    <!--Header contains Logo(linked) and symbol of bike-->
+    <!--Header contains Logo(linked)-->
     <header>
         <div class="heading">
             <!--Centered Logo-->
