--- a/equipment.html
+++ b/equipment.html
@@ -18,28 +18,30 @@
     <header>
         <div class="heading">
             <!--Centered Logo-->
-            <a href="index.html" class="logo">
-                <h1>Cycling 101</h1>
-            </a>
-        </div>
-        <!--Nav bar, centered-->
-        <div class="navigation">
-            <nav>
-                <ul class="links">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="equipment.html" class="open">Equipment</a>
-                    </li>
-                    <li>
-                        <a href="route.html">Route</a>
-                    </li>
-                    <li>
-                        <a href="signup.html">Sign Up</a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="logo">
+                <a href="index.html">
+                    <h1>Cycling 101</h1>
+                </a>
+            </div>
+            <!--Nav bar centered-->
+            <div class="navigation">
+                <nav>
+                    <ul class="links">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="equipment.html" class="open">Equipment</a>
+                        </li>
+                        <li>
+                            <a href="route.html">Route</a>
+                        </li>
+                        <li>
+                            <a href="signup.html">Sign Up</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <!--Bicycle information section-->
