--- a/route.html
+++ b/route.html
@@ -14,28 +14,31 @@
     <!--Header contains Logo(linked)-->
     <header>
         <div class="heading">
-            <a href="index.html" class="logo">
-                <h1>Cycling 101</h1>
-            </a>
-        </div>
-        <div class="navigation">
-            <nav>
-                <!--Nav bar, centered-->
-                <ul class="links">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="equipment.html">Equipment</a>
-                    </li>
-                    <li>
-                        <a href="route.html" class="open">Route</a>
-                    </li>
-                    <li>
-                        <a href="signup.html">Sign Up</a>
-                    </li>
-                </ul>
-            </nav>
+            <!--Centered Logo-->
+            <div class="logo">
+                <a href="index.html">
+                    <h1>Cycling 101</h1>
+                </a>
+            </div>
+            <!--Nav bar centered-->
+            <div class="navigation">
+                <nav>
+                    <ul class="links">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="equipment.html">Equipment</a>
+                        </li>
+                        <li>
+                            <a href="route.html" class="open">Route</a>
+                        </li>
+                        <li>
+                            <a href="signup.html">Sign Up</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <!--Route choice section-->
