Add styling to tidy up three box section

--- a/equipment.html
+++ b/equipment.html
@@ -94,6 +94,7 @@
             <h3>Padded Shorts</h3><p>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
             <!--Buttons to link to Wikipedia pages for more information-->
             <div class="button">
+                <h3>Useful links:</h3>
                 <!--Wiki on cycling Jersey-->
                 <div class="go-button">
                     <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_jersey" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Jerseys(Opens in new tab)">Jerseys</a>
@@ -115,9 +116,15 @@
         <div class="three-box-section">
             <!--Helmet Information-->
             <div class="one-third-box main-box-color">
-                <h2>The Helmet</h2>
-                <img src="assets/images/Types_of_Bicycle_Helmets.png" alt="Picture of three different types of bike helmets">
-                <p>A bicycle helmet is a type of helmet designed to protect against impact to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
+                <div class="one-third-box-div">
+                    <h2>The Helmet</h2>
+                </div>
+                <div class="one-third-box-div bike-section-media">
+                    <img src="assets/images/Types_of_Bicycle_Helmets.png" alt="Picture of three different types of bike helmets">
+                </div>
+                <div class="one-third-box-div">
+                    <p>A bicycle helmet is a type of helmet designed to protect against impact to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
+                </div>
                 <!--Button to link to Wikipedia pages for more information-->
                 <div class="button">
                     <div class="go-button">
@@ -128,9 +135,15 @@
             </div>
             <!--Second Box about the pump-->
             <div class="one-third-box main-box-color">
-                <h2>The Pump</h2>
-                <img src="assets/images/bike-pumps.jpg" alt="A picture of a bicycle pump">
-                <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always handy to take with you on a ride.</p>
+                <div class="one-third-box-div">
+                    <h2>The Pump</h2>
+                </div>
+                <div class="one-third-box-div bike-section-media">
+                    <img src="assets/images/bike-pumps.jpg" alt="A picture of a bicycle pump">
+                </div>
+                <div class="one-third-box-div">
+                    <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always handy to take with you on a ride.</p>
+                </div>
                 <!--Button to link to Wikipedia pages for more information-->
                 <div class="button">
                     <div class="go-button">
@@ -141,11 +154,17 @@
             </div>
             <!--Thrid box about Tools-->
             <div class="one-third-box main-box-color">
-                <h2>The Tools</h2>
-                <!--Image was taken from Machine Mart website-->
-                <img src="assets/images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings">
-                <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must.</p>
-                <p>In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
+                <div class="one-third-box-div">
+                    <h2>The Tools</h2>
+                </div>
+                <div class="one-third-box-div bike-section-media">
+                    <!--Image was taken from Machine Mart website-->
+                    <img src="assets/images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings">
+                </div>
+                <div class="one-third-box-div">
+                    <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must. 
+                    In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
+                </div>
                 <!--Button to link to Wikipedia pages for more information-->
                 <div class="button">
                     <div class="go-button">
