Add styling to main secion class so that background color coversthe whole div

--- a/equipment.html
+++ b/equipment.html
@@ -45,9 +45,9 @@
         </div>
     </header>
     <!--Bicycle information section-->
-    <section class="main-section">
+    <section class="main-section main-box-color">
         <!--All content here has been taken from Britannica Website-->
-        <div class="main-section-text main-box-color">
+        <div class="main-section-text">
             <h2>The Bicycle</h2>
             <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
             Bicycles are widely used for transportation, recreation, and sport.</p>
