Add styles so the new changes where responsive for mobile

--- a/equipment.html
+++ b/equipment.html
@@ -84,9 +84,9 @@
         </div>
     </section>
     <!--Clothing information section-->
-    <section class="main-section">
+    <section class="main-section main-box-color">
         <!--Content here take from Road.cc-->
-        <div class="main-section-text main-box-color">
+        <div class="main-section-text">
             <h2>Clothing</h2>
             <p>Proper clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
             <h3>Jerseys</h3><p>Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
@@ -111,66 +111,59 @@
         </div>
     </section>
     <!--Essentials section-->
-    <section class="main-section">
+    <h2 id="essentials-heading">The Essentials</h2>
+    <section class="three-box-section">
         <!--Info taken from Wiki-->
-        <div class="three-box-section">
-            <!--Helmet Information-->
-            <div class="one-third-box main-box-color">
-                <div class="one-third-box-div">
-                    <h2>The Helmet</h2>
-                </div>
-                <div class="one-third-box-div bike-section-media">
-                    <img src="assets/images/Types_of_Bicycle_Helmets.png" alt="Picture of three different types of bike helmets">
-                </div>
-                <div class="one-third-box-div">
-                    <p>A bicycle helmet is a type of helmet designed to protect against impact to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
-                </div>
-                <!--Button to link to Wikipedia pages for more information-->
-                <div class="button">
-                    <div class="go-button">
-                        <!--Wiki on Helmet-->
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_helmet" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Helmats(Opens in new tab)">Helmets</a>
-                    </div>
+        <!--Helmet Information-->
+        <div class="one-third-box main-box-color">
+            <div class="one-third-box-div">
+                <h2>The Helmet</h2>
+            </div>
+                <img src="assets/images/Types_of_Bicycle_Helmets.png" alt="Picture of three different types of bike helmets">
+            <div class="one-third-box-div">
+                <p>A bicycle helmet is a type of helmet designed to protect against impact to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
+            </div>
+            <!--Button to link to Wikipedia pages for more information-->
+            <div class="button">
+                <div class="go-button">
+                    <!--Wiki on Helmet-->
+                    <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_helmet" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Helmats(Opens in new tab)">Helmets</a>
                 </div>
             </div>
-            <!--Second Box about the pump-->
+        </div>
+        <!--Second Box about the pump-->
             <div class="one-third-box main-box-color">
-                <div class="one-third-box-div">
-                    <h2>The Pump</h2>
-                </div>
-                <div class="one-third-box-div bike-section-media">
-                    <img src="assets/images/bike-pumps.jpg" alt="A picture of a bicycle pump">
-                </div>
-                <div class="one-third-box-div">
-                    <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always handy to take with you on a ride.</p>
-                </div>
-                <!--Button to link to Wikipedia pages for more information-->
-                <div class="button">
-                    <div class="go-button">
-                        <!--Wiki on the pump-->
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_pump" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Pumps(Opens in new tab)">Pumps</a>
-                    </div>
+            <div class="one-third-box-div">
+                <h2>The Pump</h2>
+            </div>
+                <img src="assets/images/bike-pumps.jpg" alt="A picture of a bicycle pump">
+            <div class="one-third-box-div">
+                <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always handy to take with you on a ride.</p>
+            </div>
+            <!--Button to link to Wikipedia pages for more information-->
+            <div class="button">
+                <div class="go-button">
+                    <!--Wiki on the pump-->
+                    <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_pump" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Pumps(Opens in new tab)">Pumps</a>
                 </div>
             </div>
-            <!--Thrid box about Tools-->
-            <div class="one-third-box main-box-color">
-                <div class="one-third-box-div">
-                    <h2>The Tools</h2>
-                </div>
-                <div class="one-third-box-div bike-section-media">
-                    <!--Image was taken from Machine Mart website-->
-                    <img src="assets/images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings">
-                </div>
-                <div class="one-third-box-div">
-                    <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must. 
-                    In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
-                </div>
-                <!--Button to link to Wikipedia pages for more information-->
-                <div class="button">
-                    <div class="go-button">
-                        <!--Wiki on tools-->
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_tools" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Tools(Opens in new tab)">Tools</a>
-                    </div>
+        </div>
+        <!--Thrid box about Tools-->
+        <div class="one-third-box main-box-color">
+            <div class="one-third-box-div">
+                <h2>The Tools</h2>
+            </div>
+            <!--Image was taken from Machine Mart website-->
+            <img src="assets/images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings">
+            <div class="one-third-box-div">
+                <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must. 
+                In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
+            </div>
+            <!--Button to link to Wikipedia pages for more information-->
+            <div class="button">
+                <div class="go-button">
+                    <!--Wiki on tools-->
+                    <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_tools" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Tools(Opens in new tab)">Tools</a>
                 </div>
             </div>
         </div>
