Add change of elements and styles to tidy website up

--- a/signup.html
+++ b/signup.html
@@ -42,8 +42,7 @@
         </div>
     </header>
     <!--Sign up form background Image-->
-    <section class="image-section">
-        <div id="sign-up"></div>
+    <section class="sign-up">
         <!--Sign up form, looking for First Name, Last Name and Email Address-->
         <form action="https://formdump.codeinstitute.net/" method="POST" class="details-form">
             <h2>Tell us your details!</h2>
