--- a/route.html
+++ b/route.html
@@ -42,23 +42,21 @@
         </div>
     </header>
     <!--Route choice section-->
-    <section class="block-section">
-        <!--Information here taken from the cycling weekly website on route selection-->
-        <div class="main-section">
-            <div class="main-section-text main-box-color">
-                <h2>How to choose a route</h2>
-                <p>When choosing a route to cycle, most people will follow a main road way or the most popular route. These selections are fine, but they will always be busy with either other cyclists or cars.
-                To really get a sense of adventure and the thrill of discovering new landscape, there are a few options to choosing a route.</p>
-                <h4>Take Side Roads</h4><p>By taking side roads, you can avoid most of the traffic that comes with cycling on main roads. Meaning you can keep up a decent pace and take in the landscape. Even slow down at times when there is something beautiful to look at.</p>
-                <h4>Take a look at local maps</h4><p>By Looking at local maps of your area you can see what side roads to take and where there are hills possibly to avoid.</p>
-                <h4>Get suggestions from other riders</h4><p>By asking other riders for suggestions you can get the best routes as other riders may be fairly experianced and will tell you the best ways to go. To find other riders you can join clubs or pop into local cycling shops and ask.</p>
-                <h4>A Map</h4><p>Take a map with you, it is the easiest and most straight forward thing to do, everytime you stop take out your map and plan the rest of the way. Works with google, apple or bing maps too on your smartphone.</p>
-            </div>
-            <!--Image for Route section-->
-            <div class="bike-section-media">
-                <!--Image of a man cycling-->
-                <img src="assets/images/route-picture.jpg" alt="Image of cyclist looking at the winding road ahead">
-            </div>
+    <section class="main-section main-box-color">
+    <!--Information here taken from the cycling weekly website on route selection-->
+        <div class="main-section-text">
+            <h2>How to choose a route</h2>
+            <p>When choosing a route to cycle, most people will follow a main road way or the most popular route. These selections are fine, but they will always be busy with either other cyclists or cars.
+            To really get a sense of adventure and the thrill of discovering new landscape, there are a few options to choosing a route.</p>
+            <h4>Take Side Roads</h4><p>By taking side roads, you can avoid most of the traffic that comes with cycling on main roads. Meaning you can keep up a decent pace and take in the landscape. Even slow down at times when there is something beautiful to look at.</p>
+            <h4>Take a look at local maps</h4><p>By Looking at local maps of your area you can see what side roads to take and where there are hills possibly to avoid.</p>
+            <h4>Get suggestions from other riders</h4><p>By asking other riders for suggestions you can get the best routes as other riders may be fairly experianced and will tell you the best ways to go. To find other riders you can join clubs or pop into local cycling shops and ask.</p>
+            <h4>A Map</h4><p>Take a map with you, it is the easiest and most straight forward thing to do, everytime you stop take out your map and plan the rest of the way. Works with google, apple or bing maps too on your smartphone.</p>
+        </div>
+        <!--Image for Route section-->
+        <div class="bike-section-media">
+            <!--Image of a man cycling-->
+            <img src="assets/images/route-picture.jpg" alt="Image of cyclist looking at the winding road ahead">
         </div>
     </section>
     <!--Route Suggestion section-->
@@ -74,20 +72,20 @@
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/comber-greenway--3" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">AllTrails</a>
+                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/comber-greenway--3" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">All Trails</a>
                     </div>
                 </div>
             </div>
             <!--Box two with route information-->
             <div class="one-third-box main-box-color">
                 <h2>Route 2</h2>
-                <p>This route is a circular route on Cave Hill, you can take it either way, and it is a moderate cycling route.</p>
+                <p>Tardree Mountain Loop is a 4.0 kilometer lightly trafficked loop trail located near Ballymena, Antrim, Northern Ireland that features a great forest setting and is good for all skill levels. The trail is primarily used for hiking, walking, running, and mountain biking. Dogs are also able to use this trail.</p>
                 <!--Embedded map of suggested route-->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7977.9226105487805!2d-5.95204371814857!3d54.644122436472884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2suk!4v1625580684568!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe class="alltrails" src="https://www.alltrails.com/widget/map/tardree-mountain-loop-c37f368?u=m" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/cavehill-circular" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">AllTrails</a>
+                        <a class="goButton bike-button" href="https://www.alltrails.com/trail/northern-ireland/antrim/tardree-mountain-loop" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">All Trails</a>
                     </div>
                 </div>
             </div>
@@ -100,7 +98,7 @@
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/lagan-towpath?mobileMap=false&ref=sidebar-static-map" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">AllTrails</a>
+                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/lagan-towpath?mobileMap=false&ref=sidebar-static-map" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">All Trails</a>
                     </div>
                 </div>
             </div>
