Add new iframe for route suggestion maps, changed from google maps to all trail maps

--- a/route.html
+++ b/route.html
@@ -68,7 +68,7 @@
                 <h2>Route 1</h2>
                 <p>This route takes you from CS Lewis square in East Belfast to Comber, using the Comber Greenway. It is an easy route and very safe.</p>
                 <!--Embedded map of suggested route-->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d38023.11458174982!2d-5.851053449558181!3d54.56534515755178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x48610975a21e69ab%3A0x8de4d08e58098ce6!2sBelfast%20BT5%205BQ!3m2!1d54.596858!2d-5.886393099999999!4m5!1s0x48610b4458a1149f%3A0x174d2ab9d447862!2sComber%2C%20Newtownards!3m2!1d54.550454699999996!2d-5.7456751!5e1!3m2!1sen!2suk!4v1625578148994!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe class="alltrails" src="https://www.alltrails.com/widget/trail/northern-ireland/antrim/comber-greenway--3?u=m" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
@@ -94,7 +94,7 @@
                 <h2>Route 3</h2>
                 <p>An easy route for any bike, and skill level. It is the Lagan Tow Path from Stranmillis to Lisburn. Mostly flat following the old tow path of the River Lagan and the Lagan canal.</p>
                 <!--Embedded map of suggested route-->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d63980.576985956424!2d-6.0400339434433175!3d54.54393585903106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x4861098d6dbce215%3A0x5ada80f51fbe5057!2sLagan%20Tow%20Path%2C%20Stranmillis%20Embankment%2C%20Belfast%20BT9%205FL!3m2!1d54.5701739!2d-5.9278357999999995!4m5!1s0x4860fd87d4a2c71d%3A0xc297ab8d94f3183b!2sLisburn!3m2!1d54.516245999999995!2d-6.058010599999999!5e1!3m2!1sen!2suk!4v1625580890635!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe class="alltrails" src="https://www.alltrails.com/widget/trail/northern-ireland/antrim/lagan-towpath?u=m" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="AllTrails: Trail Guides and Maps for Hiking, Camping, and Running"></iframe>
                 <!--Button that will take you the All Trails site detailing the route-->
                 <div class="button">
                     <div class="go-button">
