Changed sign up for mbutton back to type submit

--- a/signup.html
+++ b/signup.html
@@ -62,7 +62,7 @@
                 <input type="email" name="email_address" id="eaddress" class="form-input" required>
             </div>
             <!--Button to sub,it your details-->
-            <input type="button" value="Sign Up!" class="goButton" id="form-button">
+            <input type="submit" value="Sign Up!" class="goButton" id="form-button">
         </form>
     </section>
     <footer><!--Footer will contain links to social media-->
